<?xml version="1.0"?>
<package format="2">
  <name>lidar_crop</name>
  <version>1.0.0</version>
  <description>The lidar_crop package</description>

  <maintainer email="libaojian1111@163.com">>wang haijiao</maintainer>
  <license>BSD</license>
  <author email="libaojian1111@163.com">wang haijiao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>generate_messages</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>generate_messages</exec_depend>

</package>
